# mam

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  finance.db  main.py  pyproject.toml  requirements.txt
templates/: base.html  index.html  login.html  pie_chart.html  records.html
